<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.creating.Creating">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstLayout_creating"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F7FBFF">

        <!--Название события-->
        <TextView
            android:id="@+id/textViewEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/EventName"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEventName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeColor="@color/blue_inCreating"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/textViewEventName"
            app:layout_constraintStart_toStartOf="@+id/textViewEventName"
            app:layout_constraintTop_toBottomOf="@+id/textViewEventName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintEventName_cinema" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Место события-->
        <TextView
            android:id="@+id/textViewEventRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EventPlaceTitle"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewEventName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewEventName"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEventName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEventPlace"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeColor="@color/blue_inCreating"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/textViewEventRegion"
            app:layout_constraintStart_toStartOf="@+id/textViewEventRegion"
            app:layout_constraintTop_toBottomOf="@+id/textViewEventRegion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextEventRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Заменить подсказку для места" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Дата события-->
        <TextView
            android:id="@+id/textViewEventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EventDateTitle"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewEventRegion"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewEventRegion"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEventPlace" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEventDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeColor="@color/blue_inCreating"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/textViewEventDate"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textViewEventDate"
            app:layout_constraintTop_toBottomOf="@+id/textViewEventDate">

            <EditText
                android:id="@+id/eventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="10.04.2021 (Сделать DatePicker, чтобы дата была в нужном формате + проверка на то, что дата не в прошлом/ Либо просто сделать проверку на введенный формат и то, что не в прошлом)"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Время события-->
        <TextView
            android:id="@+id/textViewEventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EventTimeTitle"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewEventDate"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewEventDate"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEventDate" />

        <LinearLayout
            android:id="@+id/linearLayout_Radio_EventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/textViewEventTime"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textViewEventTime"
            app:layout_constraintTop_toBottomOf="@+id/textViewEventTime">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="@dimen/text_margin"
                    android:text="@string/Morning"
                    android:textAlignment="center"
                    android:textColor="@drawable/text_radio_event_time" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="@dimen/text_margin"
                    android:text="@string/Day"
                    android:textAlignment="center"
                    android:textColor="@drawable/text_radio_event_time" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="@dimen/text_margin"
                    android:text="@string/Evening"
                    android:textAlignment="center"
                    android:textColor="@drawable/text_radio_event_time" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="@dimen/text_margin"
                    android:text="@string/Night"
                    android:textAlignment="center"
                    android:textColor="@drawable/text_radio_event_time" />
            </RadioGroup>
        </LinearLayout>

        <!-- Количество участников-->
        <!--        <TextView-->
        <!--            android:id="@+id/textViewEventParticipantsCount"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="16dp"-->
        <!--            android:text="Указать количество участников"-->
        <!--            android:textSize="16sp"-->
        <!--            app:layout_constraintEnd_toEndOf="@+id/textViewEventTime"-->
        <!--            app:layout_constraintHorizontal_bias="0.0"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/textViewEventTime"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/linearLayout_Radio_EventTime" />-->

        <Switch
            android:id="@+id/switchEventParticipantsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="68dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/EventParticipantsCountTitle"
            android:textColor="@color/gray_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewEventTime"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="@+id/textViewEventTime"
            app:layout_constraintTop_toBottomOf="@+id/textViewEventTime"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEventParticipantsCount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            app:boxStrokeColor="@color/blue_inCreating"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintCircleRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/switchEventParticipantsCount"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_Radio_EventTime">

            <!--вот тут добавить visibility gone, а в коде изменить видимость, если switch включен-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextEventParticipantsCount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="1"
                android:inputType="number"
                android:padding="0dp"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Пол участников-->

        <TextView
            android:id="@+id/textViewEventGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/GenderTitle"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/switchEventParticipantsCount"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/switchEventParticipantsCount"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEventParticipantsCount" />

        <LinearLayout
            android:id="@+id/linearLayout_Radio_Gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/textViewEventGender"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textViewEventGender"
            app:layout_constraintTop_toBottomOf="@+id/textViewEventGender">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="@dimen/text_margin"
                    android:text="@string/GenderMale"
                    android:textAlignment="center"
                    android:textColor="@drawable/text_radio_event_time" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="@dimen/text_margin"
                    android:text="@string/GenderFemale"
                    android:textAlignment="center"
                    android:textColor="@drawable/text_radio_event_time" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="@dimen/text_margin"
                    android:text="@string/GenderAny"
                    android:textAlignment="center"
                    android:textColor="@drawable/text_radio_event_time" />

            </RadioGroup>
        </LinearLayout>

        <!-- Описание события-->

        <TextView
            android:id="@+id/textViewEventDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/EventDetails"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewEventGender"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewEventGender"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_Radio_Gender" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEventDetails"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeColor="@color/blue_inCreating"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/textViewEventDetails"
            app:layout_constraintStart_toStartOf="@+id/textViewEventDetails"
            app:layout_constraintTop_toBottomOf="@+id/textViewEventDetails">

            <EditText
                android:id="@+id/editText_eventDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="Здесь можно/нужно оставить более подробную информацию о событии"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>